allow dynamic width

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-onboard",
   "version": "0.0.0-development",
-  "description": "The official React Native library for Frigade, a service for building app onboarding and education.",
+  "description": "Onboarding screens for React Native",
   "main": "src/index.ts",
   "scripts": {
     "start": "npx react-native start --reset-cache",
