fix(dependency): add react-native peer dep

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "Instructions"
   ],
   "peerDependencies": {
-    "react": "*"
+    "react": "*",
+    "react-native": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
