--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: Release
 on:
   workflow_run:
-    workflows: ['Snyk Security Check', 'Tests']
+    workflows: ['Tests']
     branches: [main]
     types:
       - completed
@@ -20,6 +20,8 @@ jobs:
           node-version: 'lts/*'
       - name: Install dependencies
         run: npm ci
+      - name: Build
+        run: npm run build
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
