--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
-    "@types/jest": "^28.1.0",
+    "@types/jest": "^23.3.1",
     "@types/react-native": "^0.67.3",
     "eslint-config-backpacker-react-ts": "^0.3.0",
-    "jest": "^28.1.0",
+    "jest": "^29.3.1",
+    "jest-config": "^29.3.1",
+    "jest-expo": "^47.0.1",
     "lint-staged": "^13.0.0",
     "metro-react-native-babel-preset": "^0.71.0",
     "prettier": "^2.4.1",
