--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lint-staged": "^13.0.0",
     "metro-react-native-babel-preset": "^0.71.0",
     "prettier": "^2.4.1",
+    "react-native": "^0.70.6",
     "semantic-release": "^19.0.3",
     "typescript": "^4.9.4"
   },
