--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
+    "@testing-library/react-native": "^11.5.1",
     "@types/jest": "^23.3.1",
     "@types/react-native": "^0.67.3",
     "eslint-config-backpacker-react-ts": "^0.3.0",
@@ -80,8 +81,5 @@
   "bugs": {
     "url": "https://github.com/FrigadeHQ/react-native-onboard/issues"
   },
-  "homepage": "https://github.com/FrigadeHQ/react-native-onboard#readme",
-  "dependencies": {
-    "@testing-library/react-native": "^11.5.1"
-  }
+  "homepage": "https://github.com/FrigadeHQ/react-native-onboard#readme"
 }
