--- a/package.json
+++ b/package.json
@@ -81,8 +81,5 @@
   "bugs": {
     "url": "https://github.com/FrigadeHQ/react-native-onboard/issues"
   },
-  "homepage": "https://github.com/FrigadeHQ/react-native-onboard#readme",
-  "dependencies": {
-    "react-native-svg": "^13.7.0"
-  }
+  "homepage": "https://github.com/FrigadeHQ/react-native-onboard#readme"
 }
