--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "./lib"
   ],
   "scripts": {
-    "build": "rm -rf ./lib/ && npx tsc",
+    "copy-files": "copyfiles -u 1 src/**/*.png ./lib",
+    "build": "rm -rf ./lib/ && npx tsc && npm run copy-files",
     "clean": "rm -rf ./lib",
     "test": "jest --no-watchman",
     "semantic-release": "semantic-release",
@@ -40,6 +41,7 @@
     "@testing-library/react-native": "^11.5.1",
     "@types/jest": "^23.3.1",
     "@types/react-native": "^0.67.3",
+    "copy-files": "^0.1.0",
     "eslint-config-backpacker-react-ts": "^0.3.0",
     "jest": "^29.3.1",
     "jest-config": "^29.3.1",
