--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@testing-library/react-native": "^11.5.1",
     "@types/jest": "^23.3.1",
     "@types/react-native": "^0.67.3",
-    "copy-files": "^0.1.0",
+    "copyfiles": "^2.4.1",
     "eslint-config-backpacker-react-ts": "^0.3.0",
     "jest": "^29.3.1",
     "jest-config": "^29.3.1",
